# libetpan

./: .gitignore  .gitmodules  Makefile.am  autogen.sh  configure.ac
build-mac/: prepare-macosx.sh  update.sh
build-mac/dependencies/: build-libcurl-ios.sh  build-libcurl-macosx.sh  prepare-curl-ios.sh  prepare-curl-macosx.sh  prepare-cyrus-sasl-ios.sh  prepare-libcurl-ios.sh  prepare-libcurl-macosx.sh
build-mac/libetpan.xcodeproj/: project.pbxproj
examples/: Makefile.am  fetch-attachment.c  mime-create.c  mime-parse.c  oxws-sample.c  oxws.c  readmsg-simple.c  readmsg-uid.c  readmsg.c
m4/: libcurl.m4
src/data-types/: Makefile.am  base64.c  mail.h  mailstream_cancel.c  mailstream_cfstream.c  mailstream_helper.c  mailstream_low.c  mailstream_ssl.c  mailstream_ssl.h  mmapstring.c
src/driver/interface/: Makefile.am  maildriver.c  maildriver_tools.c  mailmessage_tools.c  mailstorage_tools.c
src/driver/tools/: Makefile.am  mailthread.c
src/engine/: Makefile.am  mailengine.c  mailprivacy.c  mailprivacy_gnupg.c  mailprivacy_smime.c  mailprivacy_tools.c  mailprivacy_tools.h
src/low-level/: Makefile.am
src/low-level/exch/: Makefile.am  Makefile.in  helper.c  helper.h  mailexch.c  mailexch.h  mailexch_autodiscover.c  mailexch_autodiscover.h  mailexch_helper.c  mailexch_helper.h  mailexch_requests.c  mailexch_requests.h  mailexch_types.h  mailexch_types_item.c  mailexch_types_item.h  types_internal.c  types_internal.h  xml.c  xml.h
src/low-level/feed/: Makefile.am  newsfeed.c  parser.c  parser_rdf.c
src/low-level/imap/: Makefile.am  annotatemore_parser.c  mailimap.c  mailimap_keywords.c  mailimap_parser.c  mailimap_sender.c  mailimap_socket.c  mailimap_ssl.c  quota_parser.c  uidplus_parser.c  xgmlabels.c  xlist.c
src/low-level/imf/: Makefile.am  mailimf.c  mailimf_write_generic.c
src/low-level/maildir/: Makefile.am
src/low-level/mbox/: Makefile.am  mailmbox.c
src/low-level/mh/: Makefile.am  mailmh.c
src/low-level/mime/: Makefile.am  mailmime.c  mailmime_content.c  mailmime_decode.c
src/low-level/nntp/: Makefile.am  newsnntp_socket.c  newsnntp_ssl.c
src/low-level/oxws/: Makefile.am  helper.c  helper.h  oxws.c  oxws.h  oxws_autodiscover.c  oxws_autodiscover.h  oxws_requests.c  oxws_requests.h  oxws_setters.h  oxws_types.h  oxws_types_item.c  oxws_types_item.h  types_internal.c  types_internal.h  xml.c  xml.h
src/low-level/oxws/requests/: autodiscover.c  autodiscover.h  create_item.c  create_item.h  find_item.c  find_item.h  list.c  list.h
src/low-level/pop3/: Makefile.am  mailpop3.c  mailpop3_socket.c  mailpop3_ssl.c
src/low-level/smtp/: Makefile.am  mailsmtp.c  mailsmtp_socket.c  (+1 more)
src/main/: Makefile.am  libetpan.h
tests/: .gitignore  Makefile.am  decrypt.c  exch-sample.c  fetch-attachment.c  option-parser.c  oxws-sample.c  pgp.c  readmsg-uid.c  smime.c  smtpsend.c
tests/low-level/: Makefile.am
tests/low-level/oxws/: Gemfile  Makefile.am  Rakefile  assert.h  autodiscover.c  autodiscover.h  create_item.c  create_item.h  find_item.c  find_item.h  main.c  oxws.c  oxws.h  test_data.c  test_data.h  test_support.c  test_support.h
tests/low-level/oxws/test_server/: Gemfile  Rakefile  main.rb
tests/low-level/oxws/test_server/autodiscover/: autodiscover.rb  error.nokogiri  success.nokogiri
tests/low-level/oxws/test_server/cert/: server.crt  server.csr  server.key
tests/low-level/oxws/test_server/config/: config.rb  items.yaml  main.ru  user_directory.yaml  users.yaml
tests/low-level/oxws/test_server/ews/: _create_item.nokogiri  _find_item.nokogiri  _item.nokogiri  create_item.rb  ews.rb  fault.nokogiri  fault_soap_ns.nokogiri  find_item.nokogiri  find_item.rb  handlers.rb  services.wsdl  soap_response.nokogiri
tests/low-level/oxws/test_server/ntlm/: flags.rb  ntlm.rb  ntlm_extension.rb.bak
(+42 files in other folders)
